# kira-client

./: .gitignore  Makefile  README.md  ecosystem.config.js  inventory.yml  pyproject.toml  spot.yml
kira_client/: container.py  genius_chain.py  main.py
kira_client/controllers/: __init__.py  trigger_controller.py
kira_client/prompts/: __init__.py  intent_recognition_prompt.py
kira_client/routers/: __init__.py  health.py  intents.py
kira_client/services/: __init__.py  config_service.py  hardware_info_service.py  http_client.py  intent_service.py  led_strip_service.py  logger_service.py  microphone_service.py  openai_client.py  spotify_client.py  voice_trigger_detector_service.py
kira_client/stores/: __init__.py  base_file_store.py  intent_store.py
src/kira_client/: genius_api_prompt.py  genius_chain.py  main.py
src/kira_client/api/: __init__.py  spotify_api.py
src/kira_client/services/: __init__.py  genius_client.py
