[tool.poetry]
name = "kira-client"
version = "0.1.0"
description = ""
authors = ["Pavel Karpovich <pavel.karpovich@outlook.com>"]
readme = "README.md"
packages = [{include = "kira_client"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pvporcupine = "^3.0.1"
pyaudio = "^0.2.14"
apa102-pi = "^2.5.1"
gpiozero = "^2.0"
rpi-gpio = { version = "^0.7.1", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
lgpio = "^0.0.0.2"
openai = "^1.6.1"
dependency-injector = "^4.41.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
